--- a/style.css
+++ b/style.css
@@ -13,6 +13,16 @@ body {
   pointer-events: none;
 }
 
+#footer-credit {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  font-size: 10px;
+  color: rgb(0, 0, 0);
+  z-index: 9999;
+  opacity: 0.6;
+}
+
 /* 폰트 스타일 */
 @font-face {
   font-family: 'Paperlogy-Bold';
